# COPA

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: articles.json  history.json  matches.json  predictions.json  probabilities.json  rankings.json  scenarios.json  teams.json
pipeline/: .env.example  pyproject.toml
pipeline/copa/: __init__.py  config.py  pipeline.py  probabilities.py  scenarios.py  seed_elo.py  serializers.py
pipeline/copa/generation/: cache.py  openai_client.py  prompts.py
pipeline/copa/ingestion/: client.py  mapper.py
pipeline/copa/models/: elo.py  monte_carlo.py
pipeline/scripts/: _apply_texts.py  _stale.py  manual_upsert.py  publish.py  qa_articles.py  regen_text.py  run.py
pipeline/tests/: test_elo.py  test_monte_carlo.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/public/data/: articles.json  matches.json  predictions.json  probabilities.json  teams.json
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/calendar/: page.tsx
web/src/app/compare/: page.tsx
web/src/app/groups/: page.tsx
web/src/app/methodology/: page.tsx
web/src/app/simulator/: page.tsx
web/src/components/: Bracket.tsx  Breadcrumb.tsx  Delta.tsx  FavoritesTable.tsx  Flag.tsx  JsonLd.tsx  LikelyPath.tsx  PathToFinal.tsx  Prose.tsx  ResultsFeed.tsx  RoundInsights.tsx  SectionHeading.tsx  StatCard.tsx  TeamSearch.tsx  UpcomingMatches.tsx
web/src/lib/: bracket.ts  data.ts  knockout.ts  scenarios.ts  site.ts  types.ts  utils.ts
(+11 files in other folders)
