[project]
name = "copa-pipeline"
version = "0.1.0"
description = "Pipeline de dados, estatística (Elo + Monte Carlo) e IA da Copa do Mundo"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "requests>=2.32",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
